--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,3 +10,16 @@ body {
   font-family: "Montserrat", sans-serif;
   text-align: center;
 }
+
+/* style for scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+/* style for scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
